--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -9,13 +9,16 @@ html, body
 	display: flex
 	justify-content: center
 	align-items: center
-	background-color: #000
+	background-color: #111
 	font-family: 'Cascadia Code', monospace
 
 #app
-	max-width: 640px
+	max-width: 800px
 	width: 100%
-	height: 480px
+	height: 600px
 	border: 2px solid #222
 	padding: 5px
 	margin: 10px
+	background-color: #000
+	box-shadow: 8px 8px 8px #000
+	overflow: hidden
