Split typescript classes into separate files.

--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -22,3 +22,9 @@ html, body
 	background-color: #000
 	box-shadow: 8px 8px 8px #000
 	overflow: hidden
+
+.green
+	color: green
+
+.white
+	color: white
