--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -6,22 +6,15 @@ html, body
 	margin: 0
 	height: 100%
 	width: 100%
-	display: flex
-	justify-content: center
-	align-items: center
 	background-color: #111
 	font-family: 'Cascadia Code', monospace
 
 #app
-	max-width: 800px
+	display: flex
+	justify-content: center
+	align-items: center
 	width: 100%
-	height: 600px
-	border: 2px solid #222
-	padding: 5px
-	margin: 10px
-	background-color: #000
-	box-shadow: 8px 8px 8px #000
-	overflow: hidden
+	height: 100%
 
 .green
 	color: green
