Implement power button

--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -1,3 +1,12 @@
+$bios-margins: 90px
+
+$window-color-primary: #839496
+$window-color-accent-red: #DC322F
+$window-color-accent-green: #859900
+$window-color-accent-blue: #268BD2
+$window-color-accent-gold: #B58900
+$window-color-accent-pink: #D33682
+
 @font-face
 	font-family: 'Cascadia Code'
 	src: url('/woff/CascadiaCode.woff2')
@@ -23,3 +32,14 @@ html, body
 
 .white
 	color: white
+
+.accent-red
+	color: $window-color-accent-red
+.accent-green
+	color: $window-color-accent-green
+.accent-blue
+	color: $window-color-accent-blue
+.accent-gold
+	color: $window-color-accent-gold
+.accent-pink
+	color: $window-color-accent-pink
