Clean up a whole bunch of imports and create folder app

--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -1,11 +1,15 @@
 $bios-margins: 90px
 
+$window-color-primary-em: #EEE8D5
 $window-color-primary: #839496
-$window-color-accent-red: #DC322F
-$window-color-accent-green: #859900
-$window-color-accent-blue: #268BD2
 $window-color-accent-gold: #B58900
+$window-color-accent-orange: #CB4B16
+$window-color-accent-red: #DC322F
 $window-color-accent-pink: #D33682
+$window-color-accent-purple: #6C71C4
+$window-color-accent-blue: #268BD2
+$window-color-accent-teal: #2AA198
+$window-color-accent-green: #859900
 
 @font-face
 	font-family: 'Cascadia Code'
@@ -33,13 +37,21 @@ html, body
 .white
 	color: white
 
-.accent-red
-	color: $window-color-accent-red
-.accent-green
-	color: $window-color-accent-green
-.accent-blue
-	color: $window-color-accent-blue
+.accent-em
+	color: $window-color-primary-em
 .accent-gold
 	color: $window-color-accent-gold
+.accent-orange
+	color: $window-color-accent-orange
+.accent-red
+	color: $window-color-accent-red
 .accent-pink
 	color: $window-color-accent-pink
+.accent-purple
+	color: $window-color-accent-purple
+.accent-blue
+	color: $window-color-accent-blue
+.accent-teal
+	color: $window-color-accent-teal
+.accent-green
+	color: $window-color-accent-green
