--- a/resources/sass/project.sass
+++ b/resources/sass/project.sass
@@ -22,3 +22,15 @@
 
 .project img
 	width: 100%
+
+.project .video
+	position: relative
+	padding-top: 56.25%
+
+.project .video iframe
+	position: absolute
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	border: none
