Begin to add assets and other projects

--- a/resources/sass/project.sass
+++ b/resources/sass/project.sass
@@ -16,8 +16,8 @@
 
 .project .banner
 	margin: auto
-	max-width: 100%
-	width: 300px
+	max-width: 400px
+	width: 100%
 	display: block
 
 .project img
